[metadata]
name = future_typing
version = 0.3.0
description = Backport for type hinting generics in standard collections and union types as X | Y
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric Jolibois
author_email = em.jolibois@gmail.com
license = MIT
license-file = LICENSE
url = https://github.com/PrettyWood/future-typing
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = future_typing

[options.extras_require]
test =
    pytest
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --cov future_typing --cov-report=term-missing --cov-report=xml
